@startuml
title Inventory Management Data Model - Entity Overview

hide circle
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam packageStyle folder
top to bottom direction
skinparam shadowing false
skinparam nodesep 80
skinparam ranksep 80
skinparam padding 2
skinparam packagePadding 24
skinparam ArrowColor #002457
skinparam ArrowThickness 3

package "Storing" #EEF6FF {
    entity StorageLocation #8ba7e2 {
        Physical lab location, such as
        freezers, shelves, and racks.
    }

    entity Container #8ba7e2 {
        Physical holder of inventory, such as
        a tube, bottle, plate, or supplier package.
    }

    entity ContainerPosition #8ba7e2 {
        Specific position inside a container, such as
        well plate A01 or freezer box position C7.
    }
}

package "Supply" #8adfc5 {
  entity Supplier #45cea5{
    External vendor that 
    supplies ordered materials.
  }

  entity PurchaseOrder #45cea5{
    Order placed to a supplier.
  }

  entity PurchaseOrderLine #45cea5 {
    Individual ordered material 
    that may create inventory when received.
  }
}

package "Recipes" #FFF7ED {

  entity Recipe #f3dcc0 {
    Template for a lab process.\nDefines ordered steps, required inputs,\nand expected outputs.
  }

  entity RecipeStep #f3dcc0  {
    One reusable step inside a recipe.\nExample: prepare dilution plate,\nexpress samples, run binding.
  }

  entity RecipeStepDependency #f3dcc0  {
    Defines which recipe step must happen\nbefore another step can run.
  }

  entity RecipeStepInput #f3dcc0  {
    Material required by a recipe step.\nDefines amount, unit, concentration,\nand whether it is consumed.
  }

  entity RecipeStepOutput #f3dcc0 {
    Material or container produced by a recipe step.\nExample: dilution plate, expression plate,\nBLI plate, measured target tube.
  }
}

package "Workflow Execution" #ffcfbb {
  entity Customer #fdb294 {
    External customer that owns
    one or more lab projects.
  }

  entity Project #fdb294{
    Customer or lab project that owns experiments
    and project-specific materials.
  }

  entity Experiment  #fdb294 {
    Planned or executed lab experiment, such as 
    a binding experiment.
  }

  entity WorkflowRun #fdb294 {
    One execution of a lab workflow, 
    including planned retries or reruns.
  }

  entity WorkflowStepRun #fdb294 {
    Actual execution of a RecipeStep.
    Causes InventoryEvents that consume or create
    real inventory through InventoryTransactions.
  }
}

package "Inventory" #f7d6fd {
  entity MaterialTypePolicy #f2c6fa {
    Defines handling behavior for a material type,
    such as reusable, project-specific, ordered,
    produced in-house, concentration-required,
    expiry-required, or single-use.
  }

  entity Material #f2c6fa {
    Abstract definition of a material, such as DNA, 
    target protein, buffer, or consumable.
  }

  entity MaterialMetadata #f2c6fa {
    Type-specific details for a material, 
    such as DNA sequence, protein target, 
    buffer recipe, or supplier SKU.
  }

  entity InventoryEvent #f2c6fa {
    Represents one real-world inventory action.
    Groups one or more InventoryTransactions
    under a single cause.
  }

  entity InventoryLot #f2c6fa {
    One physically tracked quantity of a Material.
    Usually tied to one container position,
    lot, expiry, concentration, and location.
  }

  entity InventoryTransaction #f2c6fa {
    Audit log of inventory changes, 
    such as received, consumed, transferred, 
    created, discarded, or adjusted.
  }

  entity InventoryReservation #f2c6fa {
    Planned hold on inventory for future 
    workflow execution or expected QC reruns.
  }
}

package "Identity & Compliance" #E8E8E8 {
  entity UserIdentity #d9d9d9 {
    Unique local reference to an authenticated
    user from external IAM/IMS.
    Used for attributable actions and review.
  }

  entity AccessRole #d9d9d9 {
    System role recognized from external IAM/IMS.
    Controls which critical actions
    a user may perform.
  }

  entity UserRoleAssignment #d9d9d9 {
    Assignment of a system role
    to a specific user identity.
  }

  entity AuditEntry #d9d9d9 {
    Immutable, time-stamped audit trail record
    for critical actions on controlled records.
  }

  entity ApprovalRecord #d9d9d9 {
    Attributable approval or sign-off on a
    critical record.
    Supports future e-signature controls.
  }
}

Recipe ||--|{ RecipeStep : has steps
RecipeStep ||--o{ RecipeStepDependency : predecessor
RecipeStep ||--o{ RecipeStepDependency : successor
RecipeStep ||--o{ RecipeStepInput : requires
RecipeStep ||--o{ RecipeStepOutput : creates

RecipeStepInput }o--|| Material : input material
RecipeStepOutput }o--|| Material : output material

Project ||--o{ Experiment
Project ||--o{ InventoryLot

Experiment ||--o{ WorkflowRun : runs
Recipe ||--o{ WorkflowRun : executed as

Customer ||--o{ Project
WorkflowRun ||--|{ WorkflowStepRun : contains
RecipeStep ||--o{ WorkflowStepRun : executed as

MaterialTypePolicy ||--o{ Material : defines handling rules
Material ||--o{ MaterialMetadata
Material ||--o{ InventoryLot

InventoryEvent ||--o{ InventoryTransaction : contains
InventoryLot ||--o{ InventoryTransaction
InventoryReservation ||--o{ InventoryTransaction : fulfilled by
InventoryLot ||--o{ InventoryReservation
InventoryLot ||--o{ InventoryLot : derived_from

StorageLocation ||--o{ StorageLocation : contains
StorageLocation ||--o{ Container
Container ||--|{ ContainerPosition
ContainerPosition ||--o| InventoryLot : holds

WorkflowStepRun ||--o{ InventoryReservation : reserves stock
WorkflowStepRun ||--o{ InventoryEvent : causes
InventoryLot ||--o{ InventoryReservation : reserved quantity

Supplier ||--o{ PurchaseOrder
PurchaseOrder ||--o{ PurchaseOrderLine
Material ||--o{ PurchaseOrderLine
PurchaseOrderLine ||--o{ InventoryEvent

UserIdentity ||--o{ UserRoleAssignment : assigned
AccessRole ||--o{ UserRoleAssignment : grants
UserIdentity ||--o{ AuditEntry : performed by
UserIdentity ||--o{ ApprovalRecord : signs off

InventoryLot .. AuditEntry : audited by
InventoryEvent .. AuditEntry : audited by
InventoryReservation .. AuditEntry : audited by
WorkflowRun .. AuditEntry : audited by
WorkflowStepRun .. AuditEntry : audited by
Recipe .. AuditEntry : audited by
PurchaseOrder .. AuditEntry : audited by
PurchaseOrderLine .. AuditEntry : audited by

InventoryEvent .. ApprovalRecord : approved by
WorkflowRun ..{ ApprovalRecord : approved by
Recipe .. ApprovalRecord : approved by
PurchaseOrder .. ApprovalRecord : approved by

@enduml